small change to linear model

--- a/Gianmarco/linear_model.ipynb
+++ b/Gianmarco/linear_model.ipynb
@@ -253,7 +253,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 17,
+   "execution_count": 12,
    "metadata": {},
    "outputs": [
     {
@@ -261,8 +261,8 @@
      "output_type": "stream",
      "text": [
       "Start trials\n",
-      "100%|█████████████████████████████████████████████████████████████████████████████████████████████████████████████████████████████| 300/300 [00:02<00:00, 111.16trial/s, best loss: 3.008633476602636e-15]\n",
-      "Best parameter set: {'reg': 0.002910090441069553, 'reg_type': 1}\n",
+      "100%|███████████████████████████████████████████████████████████████████████████████████████████████████████████████████████████| 300/300 [00:03<00:00, 81.45trial/s, best loss: 3.0086338198156454e-15]\n",
+      "Best parameter set: {'reg': 0.0029411411361507924, 'reg_type': 0}\n",
       "Best loss from CV: 3e-15\n"
      ]
     }
