--- a/Gianmarco/linear_model.ipynb
+++ b/Gianmarco/linear_model.ipynb
@@ -25,7 +25,20 @@
    "cell_type": "code",
    "execution_count": 1,
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "ename": "ModuleNotFoundError",
+     "evalue": "No module named 'matplotlib'",
+     "output_type": "error",
+     "traceback": [
+      "\u001b[0;31m---------------------------------------------------------------------------\u001b[0m",
+      "\u001b[0;31mModuleNotFoundError\u001b[0m                       Traceback (most recent call last)",
+      "\u001b[1;32m/Users/gianmarcoterrones/Courses/10.C51/Project/PertQuant/XC51/Gianmarco/linear_model.ipynb Cell 4'\u001b[0m in \u001b[0;36m<cell line: 3>\u001b[0;34m()\u001b[0m\n\u001b[1;32m      <a href='vscode-notebook-cell:/Users/gianmarcoterrones/Courses/10.C51/Project/PertQuant/XC51/Gianmarco/linear_model.ipynb#ch0000003?line=0'>1</a>\u001b[0m \u001b[39mimport\u001b[39;00m \u001b[39msys\u001b[39;00m\n\u001b[1;32m      <a href='vscode-notebook-cell:/Users/gianmarcoterrones/Courses/10.C51/Project/PertQuant/XC51/Gianmarco/linear_model.ipynb#ch0000003?line=1'>2</a>\u001b[0m sys\u001b[39m.\u001b[39mpath\u001b[39m.\u001b[39mappend(\u001b[39m'\u001b[39m\u001b[39m../../\u001b[39m\u001b[39m'\u001b[39m)\n\u001b[0;32m----> <a href='vscode-notebook-cell:/Users/gianmarcoterrones/Courses/10.C51/Project/PertQuant/XC51/Gianmarco/linear_model.ipynb#ch0000003?line=2'>3</a>\u001b[0m \u001b[39mfrom\u001b[39;00m \u001b[39msimCRN\u001b[39;00m\u001b[39m.\u001b[39;00m\u001b[39mmultivariate_reg\u001b[39;00m \u001b[39mimport\u001b[39;00m read_eq_data_file, convert_np2df, get_stats, Z_normalize_data, min_max_normalize, prep_data, plot_data, plot_predict, plot_true_and_pred, plot_error_hist, plot_true_v_error, plot_residuals, subset\n\u001b[1;32m      <a href='vscode-notebook-cell:/Users/gianmarcoterrones/Courses/10.C51/Project/PertQuant/XC51/Gianmarco/linear_model.ipynb#ch0000003?line=3'>4</a>\u001b[0m \u001b[39mimport\u001b[39;00m \u001b[39mtensorflow\u001b[39;00m \u001b[39mas\u001b[39;00m \u001b[39mtf\u001b[39;00m\n\u001b[1;32m      <a href='vscode-notebook-cell:/Users/gianmarcoterrones/Courses/10.C51/Project/PertQuant/XC51/Gianmarco/linear_model.ipynb#ch0000003?line=4'>5</a>\u001b[0m \u001b[39mfrom\u001b[39;00m \u001b[39mtensorflow\u001b[39;00m \u001b[39mimport\u001b[39;00m keras\n",
+      "File \u001b[0;32m~/Courses/10.C51/Project/PertQuant/simCRN/multivariate_reg.py:1\u001b[0m, in \u001b[0;36m<module>\u001b[0;34m\u001b[0m\n\u001b[0;32m----> <a href='file:///Users/gianmarcoterrones/Courses/10.C51/Project/PertQuant/simCRN/multivariate_reg.py?line=0'>1</a>\u001b[0m \u001b[39mimport\u001b[39;00m \u001b[39mmatplotlib\u001b[39;00m\u001b[39m.\u001b[39;00m\u001b[39mpyplot\u001b[39;00m \u001b[39mas\u001b[39;00m \u001b[39mplt\u001b[39;00m\n\u001b[1;32m      <a href='file:///Users/gianmarcoterrones/Courses/10.C51/Project/PertQuant/simCRN/multivariate_reg.py?line=1'>2</a>\u001b[0m \u001b[39mimport\u001b[39;00m \u001b[39mpandas\u001b[39;00m \u001b[39mas\u001b[39;00m \u001b[39mpd\u001b[39;00m\n\u001b[1;32m      <a href='file:///Users/gianmarcoterrones/Courses/10.C51/Project/PertQuant/simCRN/multivariate_reg.py?line=2'>3</a>\u001b[0m \u001b[39mimport\u001b[39;00m \u001b[39mmath\u001b[39;00m\n",
+      "\u001b[0;31mModuleNotFoundError\u001b[0m: No module named 'matplotlib'"
+     ]
+    }
+   ],
    "source": [
     "import sys\n",
     "sys.path.append('../../')\n",
@@ -56,6 +69,26 @@
    "outputs": [],
    "source": [
     "Ci_all_array, Am_array, Cmin, Cmax, Ai = read_eq_data_file('../4-4-2-asym-AB-AC.txt')"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 5,
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "(2000, 2)"
+      ]
+     },
+     "execution_count": 5,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "Ci_all_array.shape"
    ]
   },
   {
@@ -253,7 +286,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 12,
+   "execution_count": 14,
    "metadata": {},
    "outputs": [
     {
@@ -261,8 +294,8 @@
      "output_type": "stream",
      "text": [
       "Start trials\n",
-      "100%|███████████████████████████████████████████████████████████████████████████████████████████████████████████████████████████| 300/300 [00:03<00:00, 81.45trial/s, best loss: 3.0086338198156454e-15]\n",
-      "Best parameter set: {'reg': 0.0029411411361507924, 'reg_type': 0}\n",
+      "100%|████████████████████████████████████████████████████████████████████████████████████████████████| 300/300 [00:02<00:00, 117.10trial/s, best loss: 3.008871294061469e-15]\n",
+      "Best parameter set: {'reg': 0.0019465726744386876, 'reg_type': 0}\n",
       "Best loss from CV: 3e-15\n"
      ]
     }
@@ -334,7 +367,7 @@
    "name": "python",
    "nbconvert_exporter": "python",
    "pygments_lexer": "ipython3",
-   "version": "3.10.4"
+   "version": "3.9.1"
   }
  },
  "nbformat": 4,
