added time binning for slide summing

--- a/random_forest/random_forest_10-10-2-asym.ipynb
+++ b/random_forest/random_forest_10-10-2-asym.ipynb
@@ -546,6 +546,30 @@
   },
   {
    "cell_type": "code",
+   "execution_count": 22,
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "[{'max_depth': 4, 'min_samples_split': 0, 'n_estimators': 7},\n",
+       " {'max_depth': 4, 'min_samples_split': 0, 'n_estimators': 7},\n",
+       " {'max_depth': 3, 'min_samples_split': 0, 'n_estimators': 2},\n",
+       " {'max_depth': 4, 'min_samples_split': 0, 'n_estimators': 5},\n",
+       " {'max_depth': 2, 'min_samples_split': 0, 'n_estimators': 3}]"
+      ]
+     },
+     "execution_count": 22,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "best_params_list"
+   ]
+  },
+  {
+   "cell_type": "code",
    "execution_count": null,
    "metadata": {},
    "outputs": [],
