--- a/Gianmarco/4-4-2-asym-AB-AC/README
+++ b/Gianmarco/4-4-2-asym-AB-AC/README
@@ -1,1 +1,1 @@
-In order to run the python scripts in these folders, I use https://github.com/hjkgrp/AutomaticDesign
+In order to run the python scripts in these folders, I use the package https://github.com/hjkgrp/AutomaticDesign, i.e. molSimplifyAD
