more random forest stuff

--- a/random_forest/random_forest_2-2-2-asym.ipynb
+++ b/random_forest/random_forest_2-2-2-asym.ipynb
@@ -55,6 +55,23 @@
   },
   {
    "cell_type": "code",
+   "execution_count": 34,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "1.5e-06\n"
+     ]
+    }
+   ],
+   "source": [
+    "print(Cmax)"
+   ]
+  },
+  {
+   "cell_type": "code",
    "execution_count": 20,
    "metadata": {},
    "outputs": [
@@ -291,6 +308,9 @@
     "    \n",
     "    model = RandomForestRegressor(criterion=\"squared_error\", n_estimators=args['n_estimators'], \\\n",
     "                                  min_samples_split=args['min_samples_split'], max_depth=args['max_depth'])\n",
+    "    X_scaler = StandardScaler()\n",
+    "    y_scaler = StandardScaler()\n",
+    "    X_pipeline = Pipeline([('scaler', X_scaler), ('model', model)])\n",
     "    \n",
     "    scores = cross_val_score(model, X_train_scaled, y=y_train, scoring='neg_mean_squared_error')\n",
     "\n",
@@ -366,11 +386,19 @@
    ]
   },
   {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "# Train Optimized Model"
+   ]
+  },
+  {
    "cell_type": "code",
    "execution_count": 14,
    "metadata": {},
    "outputs": [],
    "source": [
+    "\n",
     "optimized_random_forest_model = RandomForestRegressor(criterion=\"squared_error\", \\\n",
     "                                                      n_estimators=n_estimators_list[best['n_estimators']], \n",
     "                                                      max_depth=max_depth_list[best['max_depth']], \\\n",
@@ -555,6 +583,36 @@
     "    print(f\"n_estimators = {n_estimators_list[best['n_estimators']]}\")\n",
     "    print(f\"max_depth = {max_depth_list[best['max_depth']]}\")\n",
     "    print(f\"min_samples_split = {min_samples_split_list[best['min_samples_split']]}\")\n"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 29,
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "[{'max_depth': 4, 'min_samples_split': 0, 'n_estimators': 6},\n",
+       " {'max_depth': 4, 'min_samples_split': 0, 'n_estimators': 2},\n",
+       " {'max_depth': 3, 'min_samples_split': 0, 'n_estimators': 6},\n",
+       " {'max_depth': 3, 'min_samples_split': 0, 'n_estimators': 6}]"
+      ]
+     },
+     "execution_count": 29,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "best_params_list"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "# Train Optimized Models (Reduced Dataset)"
    ]
   },
   {
