--- a/Gianmarco/linear_model/linear_model.ipynb
+++ b/Gianmarco/linear_model/linear_model.ipynb
@@ -353,7 +353,7 @@
  ],
  "metadata": {
   "kernelspec": {
-   "display_name": "Python 3 (ipykernel)",
+   "display_name": "Python 3.9",
    "language": "python",
    "name": "python3"
   },
@@ -367,7 +367,7 @@
    "name": "python",
    "nbconvert_exporter": "python",
    "pygments_lexer": "ipython3",
-   "version": "3.9.1"
+   "version": "3.9.10"
   }
  },
  "nbformat": 4,
